# autofi

./: .gitignore  .pdm.toml  CONTRIBUTING.md  Pipfile  README.md  contribution.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
dep/: extra_requirements.txt  linux_requirements.txt  requirements.txt  win_requirements.txt
src/: autofi  autofi.py  autofi.yaml  autofi_.py  main.py  main.pyw  setup.py
src/modules/: argcli.py  config.py  setupselenium.py  wifiauth.py  wifibot.py
src/modules/setting/: setting.py
src/modules/settings/: jsonfile.py  log.py  setting.py  taskscheduler.py
test/: main_test.py  test_main.py
