[project]
name = ""
version = ""
description = ""
authors = [
    {name = "James Tan", email = "jamestansx@gmail.com"},
]
dependencies = [
    "rich~=10.4",
    "keyring~=23.0",
    "pywin32~=301.0",
    "appdirs~=1.4",
]
requires-python = ">=3.9.0"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
