[project]
name = ""
version = ""
description = ""
authors = [
    {name = "James Tan", email = "jamestansx@gmail.com"},
]
dependencies = [
    "rich~=10.12",
    "keyring~=23.2",
    "appdirs~=1.4",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
linux-dep = [
    "secretstorage~=3.3",
    "dbus-python~=1.2",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pyinstaller~=4.5",
]
